Kit overlapping Novidades fixed

--- a/configs.css
+++ b/configs.css
@@ -41,7 +41,6 @@ nav {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border-radius: 8px;
 }
 
 a {
@@ -83,7 +82,6 @@ a {
   width: 40px;
   height: 40px;
   background-color: rgba(0, 0, 0, 0.8);
-  border-radius: 50%;
   display: none;
   flex-direction: column;
   justify-content: center;
@@ -101,7 +99,6 @@ a {
   height: 3px;
   background-color: white;
   display: block;
-  border-radius: 2px;
 }
 
 .logo-mobile {
@@ -134,17 +131,11 @@ a {
   gap: 3%;
   margin: 20px auto;
   margin-bottom: 75px;
-  border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 20px;
   background-color: white;
 }
 
-.imgs-sabonete {
-  width: 50%;
-  height: auto;
-  border-radius: 8px;
-}
 
 .product-text {
   flex: 1;
@@ -201,7 +192,6 @@ a {
 
 .kit-container {
   background-color: white;
-  border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 20px auto;
@@ -303,7 +293,6 @@ a {
   width: 20.78vw;
   height: 36.94vh;
   overflow: hidden;
-  border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 45px;
 }
@@ -312,7 +301,6 @@ a {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 8px;
 }
 
 .novidade-text {
@@ -323,7 +311,6 @@ a {
   font-size: 16px;
   font-weight: bold;
   padding: 5px 10px;
-  border-radius: 7px;
   font-family: "raleway";
 }
 
@@ -421,7 +408,6 @@ a {
 .popup-content {
   background-color: white;
   padding: 30px;
-  border-radius: 10px;
   width: 90%;
   max-width: 600px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -451,7 +437,6 @@ a {
   width: 95%;
   padding: 15px;
   border: 1px solid #ddd;
-  border-radius: 5px;
   font-size: 14px;
   background-color: #f5f5f5;
 }
@@ -470,7 +455,6 @@ a {
   color: white;
   border: none;
   padding: 10px;
-  border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
   width: 100px;
@@ -488,6 +472,10 @@ a {
   font-size: 24px;
   cursor: pointer;
   color: #333;
+}
+
+.faqs-title{
+  font-family: "GothamHTF";
 }
 
 @media (min-width: 0px) and (max-width: 602px) {
@@ -526,8 +514,7 @@ a {
     height: 153px;
     position: absolute;
     top: 10px;
-    right: 10px;
-    border-radius: 10px;
+    right: 10px; 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     justify-content: center;
     align-items: center;
@@ -594,7 +581,6 @@ a {
     width: 102px;
     height: 102px;
     background-color: #192327;
-    border-radius: 50%;
     object-fit: scale-down;
     margin-left: 36px;
     margin-top: 34px;
@@ -624,6 +610,9 @@ a {
     margin-right: 22px;
   }
 
+  .produtos {
+    padding-bottom: 500px;
+  }
   .product-container {
     flex-direction: column;
     width: 90%;
@@ -646,7 +635,6 @@ a {
     padding: 20px;
     padding-top: 40px;
     padding-bottom: 40px;
-    border-radius: 10px;
     width: 70%;
   }
 
@@ -688,74 +676,76 @@ a {
     text-align: center;
   }
 
-  .kit-container {
-    width: 70%;
-    height: auto;
-    margin-top: 36px;
-    margin-right: 28px;
-  }
-
   .kits {
+    position: relative;
     width: 100%;
-    height: 140vw;
+    display: flex;
+    height: 55vh; /* Adjust as needed */
     background-image: url("imgs/Image\ 11@2x.png");
-    margin-top: 0;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    background-position: bottom;
-    padding-top: 1px;
+    justify-content: center;
   }
-
+  
+  .kit-container {
+    position: absolute;
+    top: -80%; 
+    width:80%;
+    max-width: 500px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    z-index: 10;
+  }
+  
+  
   .kit-title {
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 700;
     color: #000;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
-
+  
   .kit-price-info {
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-bottom: 10px;
-    font-size: 41px;
+    margin-bottom: 15px;
   }
-
+  
   .kit-price {
-    font-size: 21px;
+    font-size: 28px;
     font-weight: 700;
     color: #000;
-    margin: 0;
   }
-
+  
   .kit-details {
+    font-size: 18px;
+    color: #555;
+  }
+  
+  .kit-description {
     font-size: 16px;
     color: #555;
-    margin: 0;
-  }
-
-  .kit-description {
-    font-size: 14px;
-    color: #555;
     margin-bottom: 20px;
+    line-height: 1.5;
   }
-
+  
   .kit-list {
     list-style: none;
     padding: 0;
     margin: 0;
     border-top: 1px solid #ccc;
   }
-
+  
   .kit-list li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 12px 0;
     border-bottom: 1px solid #ccc;
-    font-size: 15px;
-    font-weight: bold;
-    color: #000;
+    font-size: 16px;
   }
 
   .kit-add {
@@ -774,6 +764,7 @@ a {
 
   .novidades-title {
     font-size: 40px;
+    top: -5%;
   }
 
   .novidade-text {
@@ -793,7 +784,6 @@ a {
     width: 37.78vw;
     height: 20.78vh;
     overflow: hidden;
-    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 45px;
   }
@@ -967,8 +957,7 @@ a {
     width: 60%;
     margin: 20px auto;
     padding: 15px;
-    background-color: white;
-    border-radius: 10px;
+    background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-left: 39px;
   }
@@ -980,8 +969,7 @@ a {
     width: 60%;
     margin: 20px auto;
     padding: 15px;
-    background-color: white;
-    border-radius: 10px;
+    background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-right: 39px;
   }
@@ -990,7 +978,6 @@ a {
     width: 60%;
     height: auto;
     margin-bottom: 15px;
-    border-radius: 8px;
   }
 
   .product-text {
@@ -1137,7 +1124,6 @@ a {
     width: 26.78vw;
     height: 20.78vh;
     overflow: hidden;
-    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 45px;
   }
@@ -1219,11 +1205,14 @@ a {
     padding: 20px;
     align-items: center;
     justify-content: center;
-    background-color: #efefef;
+    background-color: #ffffff;
   }
 
+  .product-container.reverse {
+    background-color: #ffffff;
+  }
   .imgs-sabonete {
-    width: 480px;
+    max-width: 480px;
     height: 361px;
   }
 
@@ -1282,7 +1271,6 @@ a {
     width: 90%;
     height: 90%;
     overflow: hidden;
-    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 45px;
   }
